# ai-workspace

./: .ai-factory.json  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md
.ai-factory/: ARCHITECTURE.md  DESCRIPTION.md  PLAN.md
.ai-factory/patches/: 2026-03-16-17.30.md
.claude/skills/aif/: SKILL.md
.claude/skills/aif-security-checklist/: SKILL.md
.github/scripts/: verify-windows-zip.ps1
.github/workflows/: lint.yml  mcpunit.yml  release.yml  test.yml
docs/: cli.md  contributing.md  getting-started.md  mcp-server.md
src/: codegraph.rs  indexer.rs  main.rs  models.rs  path.rs  walk.rs
src/cli/: mod.rs
src/db/: crud.rs  mod.rs  schema.rs
src/mcp/: mod.rs  protocol.rs  tools.rs
tests/: cli_tests.rs  fts_search.rs  mcp_tests.rs  path_regressions.rs
